cgp add and name updated

--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Valluru <span>Samara Simha Reddy</span></div>
+                <div class="logo">V <span>Samara</span></div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -933,7 +933,7 @@
         <div class="container">
             <div class="profile-content fade-in">
                 <div class="profile-text">
-                    <h1>Samara Simha Reddy</h1>
+                    <h3>V Samara Simha Reddy</h3>
                     <div class="tagline">Turning data into meaningful insights & empowering learners through technology.</div>
                     <p class="profile-bio">
                         I'm a passionate Data Analyst, Business Analyst, and Technical Trainer with a strong background in technology and data-driven decision-making. I combine analytical skills, creativity, and leadership to deliver impactful insights and training solutions.
@@ -969,6 +969,7 @@
                         <div class="degree">B.Tech in Computer Science and Engineering (CSE)</div>
                         <div class="college">Vel Tech Rangarajan Dr. Sagunthala R&D Institute of Science and Technology</div>
                         <div class="duration">2019 – 2023</div>
+                        <p>CGPA: 8.57</p>
                     </div>
                 </div>
             </div>
